name:                purescript-export
version:             0.5.0.2
synopsis:            A library to generate PureScript types from Haskell source.
description:         Generate PureScript source code automatically from Haskell types. Using GHC.Generics, we can automatically derive PureScript type declarations, and Aeson-compatible JSON decoders & encoders.
homepage:            http://github.com/krisajenkins/purescript-export
stability:           alpha
license:             OtherLicense
license-file:        LICENSE.txt
author:              Kris Jenkins
maintainer:          kris.jenkins@clearercode.com
copyright:           2015-2016 Kris Jenkins
category:            Web
build-type:          Simple
extra-source-files:  test/*.purs
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     PureScript
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , directory
                     , formatting
                     , mtl
                     , text
                     , time
  default-language:    Haskell2010
  ghc-options:         -Wall
  other-modules: PureScript.Type
               , PureScript.Common
               , PureScript.Decoder
               , PureScript.Encoder
               , PureScript.File
               , PureScript.Record

test-suite purescript-export-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       ExportSpec
                     , TypesSpec
  build-depends:       QuickCheck
                     , base
                     , bytestring
                     , containers
                     , purescript-export
                     , hspec
                     , hspec-core
                     , quickcheck-instances
                     , text
                     , time
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/parsonsmatt/purescript-export
